[package]
name = "json-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.18"
axum-macros = "0.3.7"
tracing-subscriber = "0.3.17"
serde_json = "1.0.96"
clap = { version = "4.3.1", features = ["derive", "cargo"] }
notify = "6.0.1"